--- a/css/vrodos_asseteditor.css
+++ b/css/vrodos_asseteditor.css
@@ -335,7 +335,3 @@ a.boundingSphereButton {
     width: 46%;
     margin: 0 8px 0 8px;
 }
-
-body.admin-bar .asset_editor_style {
-    padding-top: 32px;
-}
